samples/_failures_safe/1761287470_9f4cb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99b66b37.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_99b66b37.c:170:17: error: expected declaration or statement at end of input
  170 |                 return 0;
      |                 ^~~~~~
./samples/SAFE/__tmp_99b66b37.c:170:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99b66b37.c:170:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99b66b37.c:170:17: error: expected declaration or statement at end of input
